[package]
name = "semantic-rs"
version = "1.0.0"
authors = ["Jan Schulte <hello@unexpected-co.de>", "Jan-Erik Rediger <janerik@fnordig.de>", "Sebastian Mandrean <sebastian.mandrean@gmail.com>"]
edition = "2018"
description = "Automatic crate publishing"
license = "MIT"
repository = "https://github.com/mandrean/semantic-rs"
readme = "README.md"

[dependencies]
cargo_toml = "0.11"
clap = "2.34"
clog = "0.9"
env_logger = { git = "https://github.com/env-logger-rs/env_logger", rev = "b8c3754" }
git2 = "0.14"
log = "0.4"
regex = "1.6"
semver = "1.0"
term = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-compat = "0.1"
toml = "0.5"
url = "2"

[dependencies.hubcaps]
version = "0.6"
default-features = false
features = ["rustls-tls"]
