[package]
name = "semantic-rs"
version = "2.0.2"
authors = ["Jan Schulte <hello@unexpected-co.de>", "Jan-Erik Rediger <janerik@fnordig.de>", "Sebastian Mandrean <sebastian.mandrean@gmail.com>"]
edition = "2024"
description = "Automatic crate publishing"
license = "MIT"
repository = "https://github.com/mandrean/semantic-rs"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
clog = { git = "https://github.com/clog-tool/clog-lib", rev = "0289b1b" }
env_logger = "0.11"
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
log = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
url = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
